fix jumping problem

--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -1,5 +1,5 @@
 .popup__save-button {
-  margin: 48px auto 0;
+  margin: 0 auto;
   border: 2px solid #FFFFFF;
   box-sizing: border-box;
   border-radius: 2px;
@@ -27,6 +27,6 @@
   .popup__save-button {
     width: 238px;
     height: 46px;
-    margin: 45px auto 0;
+    margin: 0 auto;
   }
 }
